2005-02-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Removed Genius
	  ColorPage-Vivid Pro II, now in external backend. Added Visioneer
	  9000.
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/sm3840.c backend/sm3840.conf
	  backend/sm3840.h backend/sm3840_lib.c backend/sm3840_lib.h
	  backend/sm3840_params.h backend/sm3840_scan.c doc/Makefile.in
	  doc/sane-sm3840.man doc/sane.man doc/descriptions/sm3840.desc:
	  Added sm3840 backend (from "Earle F. Philhower, III"
	  <earlephilhower@yahoo.com>).
	* doc/descriptions-external/sm3840.desc: Removed (backend included
	  in SANE).
	* NEWS: Updated.

2005-02-14  Gerhard Jaeger <gerhard@gjaeger.de>

*	doc/descriptions-external: Added new external backend geniusvp2.

2005-02-10  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Added CX-3600 and 3650
	  doc/sane-epson.man, backend/epson.conf: Added information about
	  GT-6500 (bug #301100)

2005-02-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.conf
	  Added IDs for Benq 5250C and 5000S

2005-02-08  Gerhard Jaeger <gerhard@gjaeger.de>

	* sanei/sanei_pp.c: Cleanup, uses now static array for parport
	  management instead of dynamically allocated. Fixes at least a
	  potential memory leak.

2005-02-06  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* doc/descriptions/unsupported.desc doc/descriptions/snapscan.desc:
	  Renamed "Benq" to "Benq (Acer)" for better access through the
	  scanner search engine. Fixes bug #301158

2005-02-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added several scanners. Minor
	  fixes.
	* doc/descriptions-external/sm3840.desc: Added new external
	  backend sm3840.
	* doc/descriptions-external/brother.desc: Updated status.
	* po/Makefile.in po/sane-backends.pl.po: Added Polish translation
	  (from Jerzy Szczudlowski