@@ -1,3 +1,7 @@
+2005-02-21  Julien Blache <jb@jblache.org>
+	* tools/hotplug-ng: added new hotplug/hotplug-ng hook, with
+	scripts and documentation.
+
 2005-02-20  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* doc/descriptions/unsupported.desc: Removed Genius
